# AbstractVM

./: CMakeLists.txt  Makefile  Makefile~  README.md  avm  test
inc/: AbstractVM.hpp  IOperand.hpp  Operand.hpp  OperandFactory.hpp  Parser.hpp  VM.hpp
src/: OperandFactory.cpp  Parser.cpp  VM.cpp  main.cpp
test/: test1  test2  test3  test5  test6  test7  test8
